bk_ida/gccida/c1/expand_builtin_apply
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply/src/builtins.c:1665:21: error: use of undeclared identifier 'machine_mode'
v5 = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply/src/builtins.c:1666:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), arguments); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply/src/builtins.c:1688:29: error: use of undeclared identifier 'machine_mode'
v16 = get_mode_alignment( ( machine_mode)v15) >> 3; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply/src/builtins.c:1691:22: error: use of undeclared identifier 'machine_mode'
v13 = gen_rtx_REG( ( machine_mode)v15, v7); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply/src/builtins.c:1692:32: error: use of undeclared identifier 'machine_mode'
v14 = adjust_address_1( v11, ( machine_mode)v15, v12, 1, 1); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply/src/builtins.c:1704:22: error: use of undeclared identifier 'machine_mode'
v19 = gen_reg_rtx( ( machine_mode)v17); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply/src/builtins.c:1705:32: error: use of undeclared identifier 'machine_mode'
v20 = adjust_address_1( v11, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v18, 1, 1); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply/src/builtins.c:1725:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
last_insn = ( rtx)last_insn[1]; 
                  ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply/src/builtins.c:1729:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v27 = ( __int64)last_insn[4]; 
                ^~~~~~~~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply/src/obj/builtins.o] Error 1
